Feat: added working BaseController for data transfer between screens, CostBreakdown,UserManagment screen prototype